Fix header overlap on rollup detail pages

--- a/src/components/InfoBanner/styles.module.scss
+++ b/src/components/InfoBanner/styles.module.scss
@@ -10,6 +10,7 @@
     position: relative;
     overflow: hidden;
     background: var(--background);
+    margin-bottom: 16px;
 
     @include mixins.tablet {
         display: flex;
@@ -26,6 +27,7 @@
     position: relative;
     overflow: hidden;
     background: var(--background);
+    margin-bottom: 16px;
 
     @include mixins.tablet {
         display: none;
