--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -1,3 +1,12 @@
+.fixedHeader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background: var(--background);
+}
+
 .content {
     display: flex;
     flex: 1;
